--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
 
 body{
-    background-color: tomato;
     font-family: 'Oswald', sans-serif;
+}
 
+.playlist{
+    width: 450px;
+    height: 800px;
+    background-color: #ff6347;
+    border:5px solid wheat;
+    padding:50px 30px;
+}
+
+.status-bar{
+    display:flex;
+    font-size: 30px;
+    padding-bottom:40px;
+}
+.status-bar__column{
+    width: 33.3%;
 }
